{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Main",
            "id": "41aae3d3-da29-40d8-88d0-955545dfee06",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "33c533aa-3ed7-4dfb-8164-c90e9bbfb141",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "b8a9a7dc-a531-4801-bfdd-a689a316f9ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "a2a8daf2-3ce1-44ee-b47a-b71c1b550183",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f6b082b7-109d-48be-8bb1-5e74f0f2e5e3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5c47f4c-ff34-4c39-b91f-1070cb21155b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdc4d4c7-5055-43fa-bc88-77013eacf819",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "316d18c4-feb0-4177-ab09-37dd1e4d7b78",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "PassThrough",
                    "id": "891b34b9-a75d-4b74-86ac-1379d407403c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "df41fc35-6bcd-4045-bfce-264dd3a5bf8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "861d85ba-9b29-4e2e-bd19-f251dc3c3ff2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb73cd6f-2a1a-4ce3-98b2-91432f9f82f0",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse + Keyboard",
            "bindingGroup": "Mouse + Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}